--- a/public/index.html
+++ b/public/index.html
@@ -2,48 +2,64 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Mohamed Bekkouche - Versatile Full-Stack Developer specializing in crafting robust digital solutions using React, Next.js, Node.js, and more."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.svg" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <title>Mohamed Bekkouche | Full-Stack Developer</title>
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>StarBucks</title>
+    <!-- Favicon -->
+    <link rel="icon" href="%PUBLIC_URL%/logo.svg" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.svg" />
+
+    <!-- Web Manifest -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Open Graph Meta Tags -->
+    <meta
+      property="og:title"
+      content="Mohamed Bekkouche | Full-Stack Developer"
+    />
+    <meta
+      property="og:description"
+      content="I am a versatile full-stack developer and innovative problem-solver passionate about crafting seamless digital solutions."
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/preview.png" />
+    <meta property="og:url" content="https://your-portfolio-url.com" />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Mohamed Bekkouche | Full-Stack Developer"
+    />
+    <meta
+      name="twitter:description"
+      content="Crafting robust digital experiences using modern web technologies like React, Next.js, and Node.js."
+    />
+    <meta name="twitter:image" content="%PUBLIC_URL%/preview.png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <!-- Footer Info -->
+    <footer>
+      <p>&copy; 2025 Mohamed Bekkouche. All rights reserved.</p>
+      <p>
+        Skills: React, Next.js, JavaScript, TypeScript, Express, MongoDB, MySQL,
+        Tailwind CSS
+      </p>
+    </footer>
   </body>
 </html>
